# fastapi_tf_idf_app

./: README.md  main.py  pyproject.toml
templates/: form.html  result.html
