[tool.poetry]
name = "fastapi-tf-idf-app"
version = "0.1.0"
description = ""
authors = ["Hasper15 <ainur.vahitov2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.12"}
uvicorn = "^0.34.2"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
